# spps

./: .gitignore  db.py  main.py  pyproject.toml  railway.json  requirements.txt  start_db.sh
api/: index.py  scaler.pkl
app/db/: __init__.py  create_db.py  test.py
app/misc/: random_score.py
app/ml/: model.py
db/: __init__.py  connection.py  models.py
